objects/Forecast_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Account_List__c</fullName>
        <label>Account List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active will generate Forecast records.</description>
        <inlineHelpText>Only active will generate Forecast records.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Account_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Account List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Page__c</fullName>
        <label>Forecast Page</label>
        <picklist>
            <picklistValues>
                <fullName>RVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWSF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Generate_Forecast_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Forecast After RVP Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Tensilica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP-Tensilica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_AM_RSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I AM RSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_AM_RVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I AM RVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_AM_WWSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I AM WWSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Forecast_Hierarchy_Name__c</fullName>
        <label>Parent Forecast Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Forecast_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Forecast Hierarchy</label>
        <referenceTo>Forecast_Hierarchy__c</referenceTo>
        <relationshipLabel>Child Forecast Hierarchies</relationshipLabel>
        <relationshipName>Forecast_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Forecast_Reminder_Email__c</fullName>
        <description>Send email to user with forecast reminder for the selected scheduled process.  Must limit users to 10 per process.</description>
        <inlineHelpText>Send email to user with forecast reminder for the selected scheduled process. Must limit users to 10 per process.</inlineHelpText>
        <label>Send Forecast Reminder Email</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Separate_Targets_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked signifies that separate targets are defined for the role.</description>
        <inlineHelpText>Check if separate targets defined for the role, uncheck otherwise.</inlineHelpText>
        <label>Separate Targets Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecast Hierarchy</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Parent_Forecast_Hierarchy__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Level  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>